Create initial footer styling

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -31,9 +31,43 @@
     </main>
 
     <footer>
-      Modern Art Gallery The Modern Art Gallery is free to all visitors and open
-      seven days a week from 8am to 9pm. Find us at 99 King Street, Newport,
-      USA.
+      <div class="container">
+        <div class="row">
+          <div class="footer__content">
+            <div class="footer__description">
+              <div class="footer__header">Modern Art Gallery</div>
+              <div class="footer__body">
+                The Modern Art Gallery is free to all visitors and open seven
+                days a week from 8am to 9pm. Find us at 99 King Street, Newport,
+                USA.
+              </div>
+            </div>
+            <div class="footer__links">
+              <a class="footer__img--wrapper" href="https://facebook.com/">
+                <img
+                  src="./assets/icon-facebook.svg"
+                  alt=""
+                  class="footer__img"
+                />
+              </a>
+              <a class="footer__img--wrapper" href="https://youtube.com/">
+                <img
+                  src="./assets/icon-instagram.svg"
+                  alt=""
+                  class="footer__img"
+                />
+              </a>
+              <a class="footer__img--wrapper" href="https://twitter.com/">
+                <img
+                  src="./assets/icon-twitter.svg"
+                  alt=""
+                  class="footer__img"
+                />
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
