setup header positioning

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -16,10 +16,33 @@
   <body>
     <section>
       <header>
-        Modern Art Gallery The arts in the collection of the Modern Art Gallery
-        all started from a spark of inspiration. Will these pieces inspire you?
-        Visit us and find out. Our location
+        <div class="header__container">
+          <div class="header__panel"></div>
+          <figure class="header__img--wrapper">
+            <img
+              src="./assets/desktop/image-hero@2x.jpg"
+              alt="Art gallery hero"
+              class="header__img"
+            />
+          </figure>
+          <div class=""></div>
+        </div>
       </header>
+      <div class="header__text">
+        <h1 class="header__title">MODERN ART GALLERY</h1>
+
+        <div class="header__body">
+          <div class="header__description">
+            <p class="header__description--text">
+              The arts in the collection of the Modern Art Gallery all started
+              from a spark of inspiration. Will these pieces inspire you? Visit
+              us and find out.
+            </p>
+
+            <button class="header__description--button">Our location</button>
+          </div>
+        </div>
+      </div>
     </section>
     <main>
       <section>
@@ -35,7 +58,7 @@
         <div class="row">
           <div class="footer__content">
             <div class="footer__description">
-              <div class="footer__header">Modern Art Gallery</div>
+              <h2 class="footer__header">Modern Art Gallery</h2>
               <div class="footer__body">
                 The Modern Art Gallery is free to all visitors and open seven
                 days a week from 8am to 9pm. Find us at 99 King Street, Newport,
