start middle section alignment

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -45,11 +45,52 @@
       </div>
     </section>
     <main>
-      <section>
-        Your day at the gallery Wander through our distinct collections and find
-        new insights about our artists. Dive into the details of their creative
-        process. Come &amp; be inspired We’re excited to welcome you to our
-        gallery and see how our collections influence you.
+      <section class="showcase">
+        <div class="container">
+          <div class="row">
+            <div class="showcase__top">
+              <div class="showcase__header">
+                <h2 class="showcase__header--title">YOUR DAY AT THE GALLERY</h2>
+                <p class="showcase__header--paragraph">
+                  Wander through our distinct collections and find new insights
+                  about our artists. Dive into the details of their creative
+                  process.
+                </p>
+              </div>
+              <figure class="showcase__top--wrapper">
+                <img
+                  src="./assets/desktop/image-grid-1@2x.jpg"
+                  class="showcase__top--img"
+                />
+              </figure>
+            </div>
+            <div class="showcase__bottom">
+              <figure class="showcase__main--wrapper">
+                <img
+                  src="./assets/desktop/image-grid-2@2x.jpg"
+                  class="showcase__main--img"
+                />
+              </figure>
+              <div class="showcase__bottom--info">
+                <figure class="showcase__bottom--wrapper">
+                  <img
+                  src="./assets/desktop/image-grid-3@2x.jpg"
+                  class="showcase__bottom--img"
+                />
+                </figure>
+                <div class="showcase__description">
+                  <h2 class="showcase__description--header">
+                    COME &amp; BE INSPIRED
+                  </h2>
+                  <p class="showcase__description--paragraph">
+                    We’re excited to welcome you to our gallery and see how our
+                    collections influence you.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
 
@@ -58,7 +99,7 @@
         <div class="row">
           <div class="footer__content">
             <div class="footer__description">
-              <h2 class="footer__header">Modern Art Gallery</h2>
+              <h2 class="footer__header">MODERN ART GALLERY</h2>
               <div class="footer__body">
                 The Modern Art Gallery is free to all visitors and open seven
                 days a week from 8am to 9pm. Find us at 99 King Street, Newport,
