add button, start mobile

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -19,11 +19,11 @@
         <div class="header__container">
           <div class="header__panel"></div>
           <figure class="header__img--wrapper">
-            <img
-              src="./assets/desktop/image-hero@2x.jpg"
+            <div
+              src=""
               alt="Art gallery hero"
               class="header__img"
-            />
+            ></div>
           </figure>
           <div class=""></div>
         </div>
@@ -39,7 +39,12 @@
               us and find out.
             </p>
 
-            <button class="header__description--button">Our location</button>
+            <div class="header__button">
+              <div class="header__button--text">OUR LOCATION</div>
+              <figure class="header__button--arrow">
+                <img src="assets/icon-arrow-right.svg" class="header__button--img" alt="" />
+              </figure>
+            </div>
           </div>
         </div>
       </div>
@@ -74,9 +79,9 @@
               <div class="showcase__bottom--info">
                 <figure class="showcase__bottom--wrapper">
                   <img
-                  src="./assets/desktop/image-grid-3@2x.jpg"
-                  class="showcase__bottom--img"
-                />
+                    src="./assets/desktop/image-grid-3@2x.jpg"
+                    class="showcase__bottom--img"
+                  />
                 </figure>
                 <div class="showcase__description">
                   <h2 class="showcase__description--header">
