--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -19,31 +19,33 @@
         <div class="header__container">
           <div class="header__panel"></div>
           <figure class="header__img--wrapper">
-            <div
-              src=""
-              alt="Art gallery hero"
-              class="header__img"
-            ></div>
+            <div src="" alt="Art gallery hero" class="header__img"></div>
           </figure>
           <div class=""></div>
         </div>
       </header>
-      <div class="header__text">
-        <h1 class="header__title">MODERN ART GALLERY</h1>
+      <div class="row">
+        <div class="header__text">
+          <h1 class="header__title">MODERN ART GALLERY</h1>
 
-        <div class="header__body">
-          <div class="header__description">
-            <p class="header__description--text">
-              The arts in the collection of the Modern Art Gallery all started
-              from a spark of inspiration. Will these pieces inspire you? Visit
-              us and find out.
-            </p>
+          <div class="header__body">
+            <div class="header__description">
+              <p class="header__description--text">
+                The arts in the collection of the Modern Art Gallery all started
+                from a spark of inspiration. Will these pieces inspire you?
+                Visit us and find out.
+              </p>
 
-            <div class="header__button">
-              <div class="header__button--text">OUR LOCATION</div>
-              <figure class="header__button--arrow">
-                <img src="assets/icon-arrow-right.svg" class="header__button--img" alt="" />
-              </figure>
+              <div class="header__button">
+                <div class="header__button--text">OUR LOCATION</div>
+                <figure class="header__button--arrow">
+                  <img
+                    src="assets/icon-arrow-right.svg"
+                    class="header__button--img"
+                    alt=""
+                  />
+                </figure>
+              </div>
             </div>
           </div>
         </div>
